css/main.css
html {
	width: 100%;
	height: 100%;
	padding: 0;
	margin: 0;
	min-height: 630px;

	overflow: hidden;
}

body {
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
	top: 0;
	font-family: 'Montserrat', sans-serif;
	font-weight: 400;
	text-shadow: none;

	overflow: hidden;


	-webkit-font-smoothing:antialiased;
	-moz-osx-font-smoothing: grayscale;
	
}

.theme-wrapper {
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;

	overflow-x: hidden;
	overflow-y: scroll;

	-webkit-overflow-scrolling: touch;
}

p {
	font-size: 16px;
	font-style: normal;
	font-weight: normal;
	line-height: 1.9em;
	letter-spacing: 0.05em;
	max-width: 850px;
	margin: 0 auto;
}

.paragraph-margins {
	padding-top: 25px;
	padding-bottom: 25px;
}

li
{
list-style-type: none;
}


/* NAVIGATION */

.main-nav {
	width:100%;
    height:60px;
    background-color:#252525;
    position:absolute;
    top:0;
    left:0;
    opacity: 0.95;
    overflow: hidden;
}


.navigation-desktop {
	position: absolute;
	float: right;
	right: 20px;
	top: 4px;

	-webkit-transition: right .6s ease-in;
	-moz-transition: right .6s ease-in;
	-o-transition: right .6s ease-in;
	transition: right .6s ease-in;
}
@media (max-width: 767px) {
	/*.navigation {top: -40px;}*/
	.navigation-desktop { right: -400px; }
}

.menu-items {
	top: 0px;
	list-style-type: none;
	text-align: center;
	display: flex;
	display: -webkit-flex;
	display: -moz-flex;
	display: -ms-flex;
}

.main-nav li a {
	top:0px;
}


.menu-section {
	display: inline;
	text-decoration: none;

	color: #6d6d6d;
	padding-right: 30px;
	top: 0px;

	-webkit-transition: color .15s linear;
	-moz-transition: color .15s linear;
	-o-transition: color .15s linear;
	transition: color .15s linear;	
}

.menu-section:hover {
	color: #E2EEF2;
}


.main-logo {
	width: 40px;
	height: 40px;
	position: absolute;
	/*background-color: #A5DFC5;*/
	background-color: #fff;
	border-radius: 50%;
	float: left;
	margin: 0;
	left: 20px;
	top: 10px;
}

.burger-menu {
	position: relative;
 	padding-left: 1.25em;
 	float: right;
 	right: -50px;

 	-webkit-transition: all .3s ease-in;
	-moz-transition: all .3s ease-in;
	-o-transition: all .3s ease-in;
	transition: all .3s ease-in;

	-webkit-transition-delay: 0.3s;
	transition-delay: 0.3s;
	cursor: pointer;
	cursor: hand;
}

@media (max-width: 767px){
	.burger-menu {right: 0px; padding: 25px;}
} 

.burger-menu:before {
	content: "";
	position: absolute;
	left: 0;
	top: 1.3em;
	width: 1.5em;
	height: 0.2em;
	background: white;
	box-shadow: 
	    0 0.45em 0 0 white,
	    0 0.9em 0 0 white;
}


/* Overlay style */
.menu-overlay {
	position: absolute;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	background: rgba(0,0,0,0.9);
}


/* Menu style */
.menu-overlay nav {
	font-family: 'Montserrat', sans-serif;
	text-align: center;
	position: relative;
	top: 25%;
	height: 60%;
}

.menu-overlay ul {
	list-style: none;
	padding: 0;
	margin: 0 auto;
	display: inline-block;
	height: 100%;
	position: relative;
}

.menu-overlay ul li {
	display: block;
	height: 20%;
	height: calc(100% / 4);
	min-height: 54px;
}

.menu-overlay ul li a {
	font-size: 30px;
	font-weight: 300;
	display: block;
	/*color: #fff;*/
	color: #fff;
	text-decoration: none;

	/*visibility: hidden;*/

	-webkit-transition: color 0.2s;
	transition: color 0.2s;
}

/* Effects */
.overlay-slidedown {
	visibility: hidden;
	-webkit-transform: translateY(-100%);
	transform: translateY(-100%);
	-webkit-transition: -webkit-transform 0.4s ease-in-out, visibility 0s 0.4s;
	transition: transform 0.4s ease-in-out, visibility 0s 0.4s;
}

.open {
	visibility: visible;
	-webkit-transform: translateY(0%);
	transform: translateY(0%);
	-webkit-transition: -webkit-transform 0.4s ease-in-out;
	transition: transform 0.4s ease-in-out;
}


/* FOOTER */

.footer {
	width: 100%;
	height: 50px;
	background-color: #252525;
	display: table;
	margin: 0 auto;
	position: relative;
	float: left;
}

@media (max-width: 640px){
	.footer { height: 75px; }
} 

.footer-credits {
	text-align: center;
	vertical-align: middle;
	font-size: 11px;
	color: #6d6d6d;
	display: table-cell;
	padding-left: 50px;
	padding-right: 50px;
	line-height: 1.5em;
}


/* HOME HERO */

.home-wrapper {
	width: 100%;
	height: 100%;
	display: block;
	position: relative;
}

.hero-wrapper {
	display: table;
	position: relative;
	width: 100%;
	height: 100%;
	min-height: 500px;
	background-image: url(../img/home/ferranheadHome.jpg);
	background-repeat: no-repeat;
	background-size: cover;
	right: 0;
	top: 0;
	overflow: hidden;
	background-position: center center;

}

@media (max-width: 1025px){
	.hero-wrapper { background-position: top top; }
} 

.hero-wrapper:before {
	content: "";
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;

	background-color: rgba(0,0,0,0.3);
}

.main-title {
	
	display: table-cell;
	vertical-align: middle;
}

.h1 {
	position: relative;
	display: block;
	width: 70%;
	margin: 0 auto;
	font-size: 110px;
	color: #fff;
	text-align: center;
	vertical-align: middle;
	font-weight: 700;
	line-height: 1em;
	padding-bottom: 25px;
	letter-spacing: -1px;

	-webkit-transition: all .3s ease-in;
	-moz-transition: all .3s ease-in;
	-o-transition: all .3s ease-in;
	transition: all .3s ease-in;
}
@media (min-width: 640px) and (max-width: 900px) {
	.h1 { width: 80%; font-size: 80px;}
}
@media (max-width: 639px) {
	.h1 { width: 90%; font-size: 48px; margin: 0 auto;}
}

.statement {
	position: relative;
	display: block;
	text-align: center;
	vertical-align: middle;
	font-family: 'Copernicus';
	font-size: 20px;
	color: #A6A6A6;
	font-weight: 700;
	font-style: italic;
	letter-spacing: .4px;

	-webkit-transition: all .3s ease-in;
	-moz-transition: all .3s ease-in;
	-o-transition: all .3s ease-in;
	transition: all .3s ease-in;
}
@media (max-width: 640px) {
	.statement { font-size: 18px; width: 70%; margin: 0 auto; line-height: 1.6em;}
}

@media (min-width: 640px) and (max-width: 900px) {
	.statement { font-size: 20px;}
}
/* ... */

